package nl.han.soex.twee.prototype.domain;

public record CarRental(double price) implements BuildingBlock {
}
