@startuml

title Code Diagram - backend externe service Triptop

class Flight <<record>> {
    -id : id
    -departureTime : DateTime
    -arrivalTime : DateTime
    +departureTime() : DateTime
    +arrivalTime() : DateTime
    +id() : id
}

class CarRental <<record>> {
    -brand : String
    +brand() : String
}

class BuildingBlockService {
    +book(BuildingBlock buildingBlock) : boolean
}

class FlightService {
    +book(BuildingBlock flight) : boolean
}

class CarRentalService {
    +book(BuildingBlock car) : boolean
}

interface BuildingBlock {
    +price() : Double
}

BuildingBlockService --> FlightService
BuildingBlockService --> CarRentalService
BuildingBlockService --> CarRental
BuildingBlockService --> Flight
Flight ..|> BuildingBlock
CarRental ..|> BuildingBlock


node "KLM API" as KLM {
}

node "Hertz API" as Hertz {
}

FlightService -- KLM
CarRentalService -- Hertz

@enduml